try to fix button stretch - not fixed

--- a/willie-learnsmart/src/app/questions/questions.component.scss
+++ b/willie-learnsmart/src/app/questions/questions.component.scss
@@ -15,6 +15,14 @@
   text-align: end;
 }
 
+.questions__button__div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 20px;
+  max-height: 20px;
+}
+
 .questions__vs {
   width: 100%;
   display: flex;
