--- a/willie-learnsmart/src/styles.scss
+++ b/willie-learnsmart/src/styles.scss
@@ -173,13 +173,9 @@ input {
 }
 
 button {
-  margin-left: 26px;
-  margin-right: 26px;
   border: none;
   height: 20px;
   width: 20px;
-  min-height: 20px;
-  max-width: 20px;
   background-color: white;
   border-radius: 4px;
 
